--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "^16.3.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@vercel/node": "^5.5.28",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "jsdom": "^27.4.0",
