--- a/vercel.json
+++ b/vercel.json
@@ -36,5 +36,11 @@
                 }
             ]
         }
-    ]
+    ],
+    "functions": {
+        "api/*.ts": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
 }
