--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-crop": "^11.0.10",
+    "react-qr-code": "^2.0.18",
+    "react-router-dom": "^7.13.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
