--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/dist
+/build
+
+# Misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
 
 # Editor directories and files
 .vscode/*
@@ -24,13 +36,17 @@ dist-ssr
 *.sln
 *.sw?
 
-# Security
-.env
-.env.local
-.env.*
+# PWA
+/public/sw.js
+/public/workbox-*.js
 
-# Build Artifacts
-vite.config.ts.timestamp-*
-dist.zip
+# Cache
+.cache
+.parcel-cache
+.vite
 
+# Vercel
 .vercel
+
+# Local development
+*.local
